# arenic_bevy

./: .aiignore  .gitignore  CLAUDE.md  Cargo.toml  DEBUGGING_PINK_MATERIAL.md  GEMINI.md  MEMORY.md  Makefile  README.md  examples_reactive_recording.rs
.claude/: settings.json  settings.local.json
.claude/agents/: adam-narrative-designer.md  alice-bevy-expert.md  (+25 more)
.junie/: guidelines.md
_docs/: BOSS_FIGHTS.md  CODING_STYLE.md  DEPLOYMENT_ITCH_TUTORIAL.md  MIGRATION.md  PITCH.md  RULEBOOK.md  RULEBOOK_DIFF.md  _TODO.md  abilities.md  ability_sounds.md  ai.txt  arenic_rules.md  atlas_animation.md  bevy_migration_guide.md  calvin-game-designer-v2.md  character_narrative.md  game_design_doc.md  game_instructions.md  lighting_design.md  mastering_audio.md  music.md  narrative_designer.md  placeholder_music.md  potential_ability_components.md  shared_components.md  understanding_handle_and_assets.md
_old/: arena.rs  camera.rs  character.rs  ui.rs
_prompts/: consol_apis_1755628491.md  prompt.md  test_prompt_1755625245.md  unwrap_other_1755635143.md  weird_empty_return_1755627986.md
arenic_bevy/: Cargo.toml
assets/: tile.glb
local_storage/: Cargo.toml
src/: animation.rs  arena.rs  audio.rs  battleground.rs  boss.rs  bundles.rs  camera.rs  character.rs  components.rs  config.rs  const_camera.rs  const_grid.rs  generators.rs  input.rs  main.rs  material_debugger.rs  material_inspector.rs  material_test_scene.rs  movement.rs  plugins.rs  pseudo_states.rs  psuedo_states.rs  recording.rs  tile.rs  trait_utils.rs  ui.rs  ui_navigation.rs  utils.rs
web/: index.html
(+287 files in other folders)
